@@ -76,6 +76,7 @@
 	- rpmio: use HEAD for servers that don't support PROPFIND (#206066).
 	- rpmio: add RPMURL_SERVER_* server capability flags.
 	- fix: report "not installed" for pkg.bogusarch (#124016).
+	- don't treat '?' as a glob character in http URI's (#143885).
 
 4.4.6 -> 4.4.7:
 	- start 4.4.7 development.
